30 Jul 97:
  o Removed check for last being before first in crange and csubstr.  Now
    returns an empty string.
-------------------------------------------------------------------------------
 7 Aug 97:
  o Merged in port of 8.0.0 code to Win32.  Contributed by Viktor Dukhovni
    <viktor@esm.com>.  Thanks Viktor!
-------------------------------------------------------------------------------
10 Aug 97:
  o Removed C global tclDeleteInterpAtEnd, as it caused problems with windows
    ports.  Instead, a Tcl global TCLXENV(deleteInterpAtShellExit) enables
    deleting the interp when the shell exits.
-------------------------------------------------------------------------------
16 Aug 97:
  o Integrated several build fixes from Jan Nijtmans' <nijtmans@worldaccess.nl>
    TclX plus patch.
-------------------------------------------------------------------------------
17 Aug 97:
  o Added patch to tcl8.0/generic/tclCmdAH.c to fix memory corruption caused
    by the format command.
-------------------------------------------------------------------------------
24 Aug 97:
  o Added support for generating standalone executables, with Tcl runtime in
    the executable as strings.  Requires Jan Nijtmans'
    <nijtmans@worldaccess.nl> Tcl/Tk Plus patch.
===============================================================================
01 Sep 97: Released TclX 8.0.0 Beta 3
===============================================================================
24 Sep 97:
  o Fixed bug with backslash parsing in lgets.
===============================================================================
 6 Oct 97: Released TclX 8.0.0
===============================================================================
18 Oct 97
  o Fixed several minor bugs.
  o Added change to help proc to search for command if full path is not
    found.  Contributed by Massimo Dal Zotto <dz@cs.unitn.it>.
-------------------------------------------------------------------------------
  